--- a/configure.ac
+++ b/configure.ac
@@ -135,6 +135,7 @@ AC_CHECK_FUNCS([strtoumax],      [], [AC_MSG_ERROR([missing required functions])
 AC_CHECK_FUNCS([uname],          [], [AC_MSG_ERROR([missing required functions])])
 
 # enables getopt_long if header and functions were found
+AC_CHECK_HEADERS([arpa/inet.h],     [], [AC_MSG_ERROR([missing required headers])])
 AC_CHECK_HEADERS([assert.h],        [], [AC_MSG_ERROR([missing required headers])])
 AC_CHECK_HEADERS([ctype.h],         [], [AC_MSG_ERROR([missing required headers])])
 AC_CHECK_HEADERS([errno.h],         [], [AC_MSG_ERROR([missing required headers])])
@@ -143,6 +144,8 @@ AC_CHECK_HEADERS([features.h],      [], [])
 AC_CHECK_HEADERS([getopt.h],        [], [AC_MSG_ERROR([missing required headers])])
 AC_CHECK_HEADERS([inttypes.h],      [], [AC_MSG_ERROR([missing required headers])])
 AC_CHECK_HEADERS([limits.h],        [], [AC_MSG_ERROR([missing required headers])])
+AC_CHECK_HEADERS([netdb.h],         [], [AC_MSG_ERROR([missing required headers])])
+AC_CHECK_HEADERS([netinet/in.h],    [], [AC_MSG_ERROR([missing required headers])])
 AC_CHECK_HEADERS([stdarg.h],        [], [AC_MSG_ERROR([missing required headers])])
 AC_CHECK_HEADERS([stdatomic.h],     [], [AC_MSG_ERROR([missing required headers])])
 AC_CHECK_HEADERS([stddef.h],        [], [AC_MSG_ERROR([missing required headers])])
