libbindle: adding bindle_basename() and bindle_basename_r()

--- a/build-aux/makefile-libbindle.am
+++ b/build-aux/makefile-libbindle.am
@@ -31,6 +31,7 @@
 EXTRA_PROGRAMS				+= tests/bindle-array-queue \
 					   tests/bindle-array-sorted \
 					   tests/bindle-array-stack \
+					   tests/bindle-str-basename \
 					   tests/bindle-str-expand \
 					   tests/bindle-str-split \
 					   tests/bindle-url-encoding \
@@ -38,6 +39,7 @@ EXTRA_PROGRAMS				+= tests/bindle-array-queue \
 LIBBINDLE_TESTS				=  tests/bindle-array-queue \
 					   tests/bindle-array-sorted \
 					   tests/bindle-array-stack \
+					   tests/bindle-str-basename \
 					   tests/bindle-str-expand \
 					   tests/bindle-str-split \
 					   tests/bindle-url-encoding \
@@ -106,6 +108,15 @@ tests_bindle_array_stack_SOURCES	= $(bindletools_srcdir)/include/bindle.h \
 					  $(bindletools_srcdir)/checks/bindle-tests.h \
 					  $(bindletools_srcdir)/checks/bindle-tests.c \
 					  $(bindletools_srcdir)/checks/bindle-array-stack.c
+
+
+# macros for tests/bindle-str-basename
+tests_bindle_str_basename_DEPENDENCIES	= lib/libbindle.a
+tests_bindle_str_basename_LDADD		= lib/libbindle.a
+tests_bindle_str_basename_SOURCES	= $(bindletools_srcdir)/include/bindle.h \
+					  $(bindletools_srcdir)/checks/bindle-tests.h \
+					  $(bindletools_srcdir)/checks/bindle-tests.c \
+					  $(bindletools_srcdir)/checks/bindle-str-basename.c
 
 
 # macros for tests/bindle-str-expand
