libbindle: adding bindle_strchomp()

--- a/build-aux/makefile-libbindle.am
+++ b/build-aux/makefile-libbindle.am
@@ -32,6 +32,7 @@ EXTRA_PROGRAMS				+= tests/bindle-array-queue \
 					   tests/bindle-array-sorted \
 					   tests/bindle-array-stack \
 					   tests/bindle-str-basename \
+					   tests/bindle-str-chomp \
 					   tests/bindle-str-dirname \
 					   tests/bindle-str-expand \
 					   tests/bindle-str-split \
@@ -41,6 +42,7 @@ LIBBINDLE_TESTS				=  tests/bindle-array-queue \
 					   tests/bindle-array-sorted \
 					   tests/bindle-array-stack \
 					   tests/bindle-str-basename \
+					   tests/bindle-str-chomp \
 					   tests/bindle-str-dirname \
 					   tests/bindle-str-expand \
 					   tests/bindle-str-split \
@@ -121,6 +123,15 @@ tests_bindle_str_basename_SOURCES	= $(bindletools_srcdir)/include/bindle.h \
 					  $(bindletools_srcdir)/checks/bindle-tests.h \
 					  $(bindletools_srcdir)/checks/bindle-tests.c \
 					  $(bindletools_srcdir)/checks/bindle-str-basename.c
+
+
+# macros for tests/bindle-str-chomp
+tests_bindle_str_chomp_DEPENDENCIES	= lib/libbindle.a
+tests_bindle_str_chomp_LDADD		= lib/libbindle.a
+tests_bindle_str_chomp_SOURCES		= $(bindletools_srcdir)/include/bindle.h \
+					  $(bindletools_srcdir)/checks/bindle-tests.h \
+					  $(bindletools_srcdir)/checks/bindle-tests.c \
+					  $(bindletools_srcdir)/checks/bindle-str-chomp.c
 
 
 # macros for tests/bindle-str-dirname
